AC_PREREQ(2.61)

AC_INIT([thruqueue], [0.1], [bugs@thrudb.org])
AC_CONFIG_AUX_DIR(config)
AC_PROG_LIBTOOL
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([thruqueue_config.h.in])
AC_CONFIG_HEADER(thruqueue_config.h)

# Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_MAKE_SET

AC_LANG(C++)

# thrift(nb) and related requirements
AC_PATH_PROG(THRIFT, thrift, no, $PATH:/usr/local/bin:/usr/bin)
if test "x$THRIFT" = "xno"; then                  
   AC_MSG_ERROR([thrift is required; please install or specify path to thrift compiler])   
fi

PKG_CHECK_MODULES(THRIFTNB, [thrift-nb], 
                  AC_DEFINE([HAVE_THRIFTNB], [1], [Define to 1 if you have the thriftnb library (-lthriftnb)]))

AX_LIB_EVENT([1.1])
if test "x$ax_have_libevent" != "xyes"; then
AC_MSG_ERROR([libevent is required; please install development libraries])   
fi

#boost
AX_BOOST_BASE([1.33.1])
AX_BOOST_FILESYSTEM
if test "x$link_filesystem" != "xyes"; then
    AC_MSG_ERROR([libboost filesystem is required; please install development libraries])   
fi
AX_BOOST_SYSTEM

# misc
AC_C_CONST
AC_CHECK_HEADERS([stdlib.h])
AC_C_INLINE
AC_HEADER_STDBOOL
AC_HEADER_STDC
AC_TYPE_INT16_T
AC_TYPE_INT32_T
AC_TYPE_UINT32_T
AC_TYPE_UINT8_T

AC_CONFIG_FILES([Makefile
                 src/Makefile])
AC_OUTPUT
