AC_PREREQ(2.61)

AC_INIT([thrudex], [0.1], [bugs@thrudb.org])
AC_CONFIG_AUX_DIR(config)
AC_PROG_LIBTOOL
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([thrudex_config.h.in])
AC_CONFIG_HEADER(thrudex_config.h)
PKG_PROG_PKG_CONFIG

# Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_MAKE_SET

AC_LANG(C++)

dnl
dnl  Look for clucene
dnl 
AC_ARG_WITH(clucene,
    [  --with-clucene[=PATH] directory where clucene exists],
    CLUCENE_DIR=$with_clucene,
    CLUCENE_DIR=default)


if test "x$CLUCENE_DIR" = "xno" ; then
    AC_MSG_ERROR(Clucene is required for thrudex)
else
    if test "x$CLUCENE_DIR" = "xdefault" ; then
            for d in $prefix /opt /opt/local /usr/local /usr; do
		if test -d "$d/include/CLucene"; then
		   CLUCENE_DIR=$d
		   CLUCENE_CPPFLAGS="-I$d/include/ -I$d/lib/"
		   CLUCENE_LDFLAGS="-L$d/lib -lclucene"
		fi
            done
    else
         CLUCENE_CPPFLAGS="-I$CLUCENE_DIR/include/ -I$CLUCENE_DIR/lib/"
         CLUCENE_LDFLAGS="-L$CLUCENE_DIR/lib -lclucene"   
    fi


CLUCENE_SAVE_LDFLAGS=$LDFLAGS
CLUCENE_SAVE_CPPFLAGS=$CPPFLAGS
LDFLAGS="$LDFLAGS $CLUCENE_LDFLAGS"
CPPFLAGS="$CPPFLAGS $CLUCENE_CPPFLAGS"

AC_LANG_PUSH([C++])
AC_MSG_CHECKING(for clucene location in $CLUCENE_DIR)
AC_MSG_CHECKING(CLucene version >= 0.9.20)
AC_TRY_RUN(
       [
#include <CLucene.h>
#include <stdio.h>
int main(void) 
{
    printf(_CL_VERSION);
    int maj, min, ver;
    sscanf(_CL_VERSION,"%d%*s%d%*s%d",&maj,&min,&ver);
    if (maj == 0 && min == 9 && ver >= 20) 
        return 1;
    return 0;
}
       ],
       [AC_MSG_RESULT(OK)],
       [AC_MSG_ERROR(Clucene is required for thrudex) ]
    )

    AC_SUBST(CLUCENE_CPPFLAGS)
    AC_SUBST(CLUCENE_LDFLAGS)

    LDFLAGS=$CLUCENE_SAVE_LDFLAGS
    CPPFLAGS=$CLUCENE_SAVE_CPPFLAGS

fi




# thrift(nb) and related requirements
AC_PATH_PROG(THRIFT, thrift, no, $PATH:/usr/local/bin:/usr/bin)
if test "x$THRIFT" = "xno"; then                  
   AC_MSG_ERROR([thrift is required; please install or specify path to thrift compiler])   
fi

PKG_CHECK_MODULES(THRIFTNB, [thrift-nb], 
                  AC_DEFINE([HAVE_THRIFTNB], [1], [Define to 1 if you have the thriftnb library (-lthriftnb)]))


AX_LIB_EVENT([1.1])
if test "x$ax_have_libevent" != "xyes"; then
AC_MSG_ERROR([libevent is required; please install development libraries])   
fi

# boost filesystem
AX_BOOST_BASE([1.33.1])
AX_BOOST_FILESYSTEM


# misc
AC_C_CONST
AC_CHECK_FUNCS([clock_gettime gettimeofday memset poll socket strcasecmp strchr strdup  mkdir setlocale])
AC_CHECK_HEADERS([stdlib.h])
AC_C_INLINE
AC_FUNC_MBRTOWC
AC_HEADER_STDBOOL
AC_HEADER_STDC
AC_TYPE_INT16_T
AC_TYPE_INT32_T
AC_TYPE_INT64_T
AC_TYPE_SIZE_T
AC_TYPE_UINT32_T
AC_TYPE_UINT8_T

AC_CONFIG_FILES([Makefile
                 src/Makefile
		 src/thrudex.pc])
AC_OUTPUT
